--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>SoMa</title>
+
+        <meta name="author" content="Ailenei Lucian Costin, Daniel Plecan"/>
+        <meta name="keywords" content="soma, social, mashup" />
+        <meta name="description" content="Social Mashup" />
+
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
@@ -28,7 +33,7 @@
 
             </div>
         </div>
-        <div class="container">
+        <div class="container" itemscope itemtype="http://schema.org/SearchAction">
 
             <!--
             <div id="left-side-widget">
@@ -48,7 +53,7 @@
 
             <div id="front-content">
 
-                <div id="logo">
+                <div itemprop="image" id="logo">
                     <div class="logo-first">so</div><div class="logo-second">ma</div>
                 </div>
 
@@ -58,10 +63,10 @@
                     <div id="search-box">
                         <div class="row">
                             <div class="col-sm-10">
-                                <input class="form-control" id="focusedInput" type="text" placeholder="Search...">
+                                <input itemprop="query" class="form-control" id="focusedInput" type="text" placeholder="Search...">
                             </div>
                             <div class="col-sm-2">
-                                <button id="showResults" class="btn btn-primary">Mash-Up</button>
+                                <button itemprop="instrument" id="showResults" class="btn btn-primary">Mash-Up</button>
                             </div>
                         </div>
                     </div>
@@ -69,7 +74,7 @@
 
                 <div class="clear"></div>
 
-                <div id="short-description">
+                <div itemprop="description" id="short-description">
                     <p>Social Surfing Machine - Search for latest news on Social Media</p>
                 </div>
 
@@ -103,5 +108,6 @@
             </div>
 
         </footer>
+
     </body>
     <html>
