--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>SoMa</title>
+
+        <meta name="author" content="Ailenei Lucian Costin, Daniel Plecan"/>
+        <meta name="keywords" content="soma, social, mashup" />
+        <meta name="description" content="Social Mashup" />
+
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/search-results.css" />
@@ -15,7 +20,7 @@
         <script src="js/searchResults.js" type="text/javascript"></script>
         <script src="js/youtubeSearch.js" type="text/javascript"></script>
     </head>
-    <body>
+    <body >
 
         <div class="navbar navbar-default" id="top">
             <div class="navbar-header">
@@ -45,18 +50,18 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container"itemscope itemtype="http://schema.org/SearchResultsPage">
 
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" itemprop="breadcrumb">
                 <li class="active"><a aria-expanded="true" href="#mashup" data-toggle="tab">Mashup</a></li>
                 <li class=""><a aria-expanded="false" href="#stories" data-toggle="tab">Stories</a></li>
                 <li class=""><a aria-expanded="false" href="#images" data-toggle="tab">Images</a></li>
                 <li class=""><a aria-expanded="false" href="#videos" data-toggle="tab">Videos</a></li>
             </ul>
 
-            <div id="searchResultsContent" class="tab-content">
+            <div id="searchResultsContent" class="tab-content"  itemprop="mainContentOfPage">
 
-                <div class="tab-pane fade active in" id="mashup">
+                <div class="tab-pane fade active in" id="mashup" itemprop="genre">
                     <div class="row">
                         <div class="col-sm-9 delimiter">
 
@@ -105,9 +110,9 @@
 
                         </div>
                     </div>
-                </div>
+                </div item>
 
-                <div class="tab-pane fade" id="stories">
+                <div class="tab-pane fade" id="stories" itemprop="genre">
 
                     <div class="tab-content">
                         <div class="row">
@@ -165,7 +170,7 @@
                     </div>
                 </div>
 
-                <div class="tab-pane fade" id="images">
+                <div class="tab-pane fade" id="images" itemprop="genre">
                     <div class="tab-content">
                         <div class="row">
                             <div class="col-sm-9 delimiter">
@@ -197,7 +202,7 @@
                     </div>
                 </div>
 
-                <div class="tab-pane fade" id="videos">
+                <div class="tab-pane fade" id="videos" itemprop="genre">
 
                     <div class="tab-content">
                         <div class="row">
